<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="main_button_1" translatable="false">Поиск</string>
    <string name="main_button_2" translatable="false">Медиатека</string>
    <string name="main_button_3" translatable="false">Настройки</string>
    <string name="setting1_dark_theme" translatable="false">Темная тема</string>
    <string name="setting2_share_app" translatable="false">Поделиться приложением</string>
    <string name="setting3_support" translatable="false">Написать в поддержку</string>
    <string name="setting4_user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="email_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_address" translatable="false">lebedeve@ya.ru</string>
    <string name="share_message" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="url_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="something_went_wrong" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="track_name" translatable="false">Название композиции</string>
    <string name="artist_name" translatable="false">Имя исполнителя</string>
    <string name="track_time" translatable="false">Длительность</string>
    <string name="title_history" translatable="false">Вы искали</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
    <string name="country" translatable="false">Страна</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="year" translatable="false">Год</string>
    <string name="collection" translatable="false">Альбом</string>
    <string name="time_play_track" translatable="false">00:00</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="new_playlist_is_created" translatable="false">Новый плейлист создан</string>
    <string name="empty_library" translatable="false">Ваша медиатека пуста</string>
    <string name="no_playlist" translatable="false">Вы не создали\nни одного плейлиста</string>
    <string name="no_tracks_in_playlist" translatable="false">В плейлист еще не добавлен\nни один трек</string>
    <string name="favorite_tracks" translatable="false">Избранные треки</string>
    <string name="playlists" translatable="false">Плейлисты</string>
    <string name="playlist" translatable="false">Плейлист</string>
    <string name="name" translatable="false">Название*</string>
    <string name="playlist_name" translatable="false">Название плейлиста</string>
    <string name="playlists_tracks_number" translatable="false">Число треков в плейлисте</string>
    <string name="playlist_description" translatable="false">Описание</string>
    <string name="create_playlist" translatable="false">Создать</string>
    <string name="add_to_playlist" translatable="false">Добавить в плейлист</string>
    <string name="add_to_playlist_true" translatable="false">Добавлено в плейлист</string>
    <string name="add_to_playlist_false" translatable="false">Трек уже добавлен в плейлист</string>
    <string name="no_media_selected" translatable="false">No media selected</string>
    <string name="choose_camera_permission" translatable="false">Выберите в разрешениях (Permissions) доступ к CAMERA</string>
    <string name="permission_is_necessary" translatable="false">Разрешение необходимо, чтобы выбрать обложку для плейлиста</string>
    <string name="finish_creation" translatable="false">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost" translatable="false">Все несохраненные данные будут потеряны</string>
    <string name="cancel" translatable="false">Отмена</string>
    <string name="finish" translatable="false">Завершить</string>
    <string name="track" translatable="false">трек</string>
    <string name="of_track" translatable="false">трека</string>
    <string name="of_tracks" translatable="false">треков</string>
    <string name="minute" translatable="false">минута</string>
    <string name="minutes" translatable="false">минуты</string>
    <string name="of_minutes" translatable="false">минут</string>
    <string name="delete_track" translatable="false">Удалить трек</string>
    <string name="delete_playlist" translatable="false">Удалить плейлист</string>
    <string name="request_delete_playlist" translatable="false">Хотите удалить плейлист</string>
    <string name="confirmation_delete_track" translatable="false">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete" translatable="false">Удалить</string>
    <string name="share_is_not_possible" translatable="false">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share" translatable="false">Поделиться</string>
    <string name="edit_info" translatable="false">Редактировать информацию</string>
    <string name="yes" translatable="false">Да</string>
    <string name="no" translatable="false">Нет</string>
    <string name="edit" translatable="false">Редактировать</string>
    <string name="save" translatable="false">Сохранить</string>
</resources>