<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StandardScreen"
    android:background="@color/background_activity_settings"
    android:padding="@dimen/four_space"
    tools:context="com.practicum.playlistmaker.settings.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/six_space">

        <TextView
            style="@style/TextHeaderSettings"
            android:text="@string/main_button_3" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuSettings"
            android:text="@string/setting1_dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/smThemeSwitcher"
            android:layout_width="@dimen/fourteen_space"
            android:layout_height="@dimen/fourteen_space"
            android:layout_gravity="end" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuSettings"
            android:text="@string/setting2_share_app" />

        <ImageView
            android:id="@+id/ivShare"
            style="@style/IconSettings"
            android:src="@drawable/share" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuSettings"
            android:text="@string/setting3_support" />

        <ImageView
            android:id="@+id/ivSupport"
            style="@style/IconSettings"
            android:src="@drawable/support" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/MenuSettings"
            android:text="@string/setting4_user_agreement" />

        <ImageView
            android:id="@+id/ivUserAgreement"
            style="@style/IconSettings"
            android:src="@drawable/arrow_forward" />

    </FrameLayout>

</LinearLayout>