<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:padding="@dimen/standard_space"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        app:cornerRadius="@dimen/standard_space"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="#1A1B22"
        app:iconPadding="@dimen/icon_padding"
        android:text="@string/main_button_1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/media_library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_space"
        app:cornerRadius="@dimen/standard_space"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconTint="#1A1B22"
        app:iconPadding="@dimen/icon_padding"
        android:text="@string/main_button_2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_space"
        app:cornerRadius="@dimen/standard_space"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="#1A1B22"
        app:iconPadding="@dimen/icon_padding"
        android:text="@string/main_button_3"
        android:textColor="@color/black"
        android:textSize="@dimen/text_button"
        android:textAllCaps="false"/>

</LinearLayout>