<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.AudioPlayerActivity">

    <ImageView
        android:id="@+id/arrowBackImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/one_space"
        android:layout_marginTop="@dimen/one_space"
        android:paddingBottom="@dimen/one_space"
        android:src="@drawable/arrow_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/six_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/six_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/extraLeftBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/four_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/extraRightBorder"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/four_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/album"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w,1:1"
        android:layout_marginTop="@dimen/six_space"
        android:layout_marginBottom="@dimen/six_space"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/arrowBackImage"
        app:layout_constraintBottom_toTopOf="@id/trackName"
        tools:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/trackName"
        style="@style/TitleOfTrackOnAudioplayer"
        android:layout_marginBottom="@dimen/three_space"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@id/artistName"
        android:textSize="@dimen/twenty_two_size_text"
        tools:text="@string/track_name" />

    <TextView
        android:id="@+id/artistName"
        style="@style/TitleOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@id/controlPlay"
        android:layout_marginBottom="@dimen/seven_space"
        android:textSize="@dimen/fourteen_size_text"
        tools:text="@string/artist_name" />

    <ImageView
        android:id="@+id/addToPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintTop_toTopOf="@id/controlPlay"
        app:layout_constraintBottom_toBottomOf="@id/controlPlay"
        android:src="@drawable/add_to_playlist" />

    <ImageView
        android:id="@+id/addToFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/artistName"
        app:layout_constraintTop_toTopOf="@id/controlPlay"
        app:layout_constraintBottom_toBottomOf="@id/controlPlay"
        android:src="@drawable/is_favorite" />

    <ImageView
        android:id="@+id/controlPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@id/timePlayTrack"
        android:layout_marginBottom="@dimen/one_space"
        android:src="@drawable/control_play" />

    <TextView
        android:id="@+id/timePlayTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintBottom_toTopOf="@id/trackTimeTitle"
        android:layout_marginBottom="@dimen/seven_space"
        android:text="@string/time_play_track" />

    <TextView
        android:id="@+id/trackTimeTitle"
        style="@style/TitlesOfPropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/extraLeftBorder"
        app:layout_constraintBottom_toTopOf="@id/collection"
        android:text="@string/track_time" />

    <TextView
        android:id="@+id/trackTime"
        style="@style/PropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/trackTimeTitle"
        app:layout_constraintEnd_toStartOf="@id/extraRightBorder"
        app:layout_constraintBottom_toTopOf="@id/collection"
        tools:text="@string/track_time" />

    <TextView
        android:id="@+id/collectionTitle"
        style="@style/TitlesOfPropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/extraLeftBorder"
        app:layout_constraintBottom_toTopOf="@id/year"
        android:text="@string/collection" />

    <TextView
        android:id="@+id/collection"
        style="@style/PropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/collectionTitle"
        app:layout_constraintEnd_toStartOf="@id/extraRightBorder"
        app:layout_constraintBottom_toTopOf="@id/year"
        tools:text="@string/collection" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/collectionGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="collectionTitle,collection" />

    <TextView
        android:id="@+id/year"
        style="@style/PropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/yearTitle"
        app:layout_constraintEnd_toStartOf="@id/extraRightBorder"
        app:layout_constraintBottom_toTopOf="@id/genre"
        tools:text="@string/year" />

    <TextView
        android:id="@+id/yearTitle"
        style="@style/TitlesOfPropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/extraLeftBorder"
        app:layout_constraintBottom_toTopOf="@id/genre"
        android:text="@string/year" />

    <TextView
        android:id="@+id/genreTitle"
        style="@style/TitlesOfPropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/extraLeftBorder"
        app:layout_constraintBottom_toTopOf="@id/country"
        android:text="@string/genre" />

    <TextView
        android:id="@+id/genre"
        style="@style/PropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/genreTitle"
        app:layout_constraintEnd_toStartOf="@id/extraRightBorder"
        app:layout_constraintBottom_toTopOf="@id/country"
        tools:text="@string/genre" />

    <TextView
        android:id="@+id/countryTitle"
        style="@style/TitlesOfPropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/extraLeftBorder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/seven_space"
        android:text="@string/country" />

    <TextView
        android:id="@+id/country"
        style="@style/PropertiesOfTrackOnAudioplayer"
        app:layout_constraintStart_toEndOf="@id/countryTitle"
        app:layout_constraintEnd_toStartOf="@id/extraRightBorder"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/seven_space"
        tools:text="@string/country" />

</androidx.constraintlayout.widget.ConstraintLayout>