<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/cover"
        android:layout_width="@dimen/cover_image"
        android:layout_height="@dimen/cover_image"
        android:layout_marginStart="@dimen/standard_space"
        android:layout_marginTop="@dimen/small_space"
        android:layout_marginBottom="@dimen/small_space"
        android:layout_marginEnd="@dimen/small_space" />

    <LinearLayout
        android:layout_width="@dimen/zero_space"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginEnd="@dimen/small_space"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/trackName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/text_color"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/standard_text"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="@string/track_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <TextView
                android:id="@+id/artistName"
                style="@style/PropertiesOfTrack"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_toStartOf="@id/iconDivide"
                tools:text="@string/artist_name" />

            <ImageView
                android:id="@+id/iconDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_toStartOf="@id/trackTime"
                android:src="@drawable/point"/>

            <TextView
                android:id="@+id/trackTime"
                style="@style/PropertiesOfTrack"
                android:layout_alignParentEnd="true"
                tools:text="@string/track_time" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/standard_space"
        android:src="@drawable/arrow_forward" />

</LinearLayout>